Added flexbox to images, created containers, put images into the repo itself. Will eventually create and array of objects for blog posts API style to serve and make room for more blog posts

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-      <img src="https://i.imgur.com/lABnZHZ.jpeg" width="200" height="190">
+      <img src="images/dolphin-by-SayuriMVRomei.jpg" width="200" height="190">
       <h1>(魚) Marine Life (魚)</h1>
       <h4>Just an old man from Japan who's engrossed in Marine Life. Also books about planes and ships.</h4>
   
@@ -27,8 +27,12 @@
   
   <article>
     <h2>Banded Archerfish</h2>
-    <img src="https://i.imgur.com/ObiG28M.jpeg" class="responsive">
-      <figcaption>https://animals.sandiegozoo.org/animals/banded-archer-fish</figcaption>
+    <div class="blog-image-container">
+      <div class="blog-image-caption-container">
+        <img src="images/banded-archerfish.jpg" class="responsive">
+        <figcaption>https://animals.sandiegozoo.org/animals/banded-archer-fish</figcaption>
+      </div>
+    </div>
     <p>The Banded Archerfish is unique from other fish in the fact it shoots projectiles, hence its name.</p>
     <p>Through eons of evolutionary changed, the archerfish have adapted to spew jet waves at a distance, usually
     150cm (or 59 inches), but much larger fish can spit as far as 2-3 meters (6-9 feet). This is their prefered method
@@ -43,8 +47,12 @@
   
   <article>
     <h2>Moon Jelly</h2>
-    <img src="https://i.imgur.com/OmIaXs6.jpeg" class="responsive">
-      <figcaption>https://lucnix.be/picture.php?/148566/categories/created-monthly-list-2010-5-23</figcaption>
+    <div class="blog-image-container">
+      <div class="blog-image-caption-container">
+        <img src="images/moon-jelly.jpg" class="responsive">
+        <figcaption>https://lucnix.be/picture.php?/148566/categories/created-monthly-list-2010-5-23</figcaption>
+    </div>
+    </div>
     <p>This may not look it, but this is actually a plankton</p>
     <p>Well... technically. Jellyfish are simple creatures, and are considered to be zooplankton for their
     soft, transparent bodies that are too weak to swim against a current</p>
@@ -59,8 +67,12 @@
   
   <article>
     <h2>Trip to Egypt</h2>
-    <img src="https://i.imgur.com/PBlPRsd.jpeg" class="responsive">
-      <figcaption>Circa 1988 (https://www.britannica.com/topic/sphinx)</figcaption>
+    <div class="blog-image-container">
+      <div class="blog-image-caption-container">
+        <img src="images/sphinx.jpg" class="responsive">
+        <figcaption>Circa 1988 (https://www.britannica.com/topic/sphinx)</figcaption>
+      </div>
+    </div>
     <p>My grandfather was a photographer. He took this photo during out trip to Egypt in 1988</p>
     <button>Like (487.1k)</button>
     <button>Share (56.4k)</button>
@@ -68,8 +80,12 @@
   
   <article>
     <h2>Porgy Fish</h2>
-    <img src="https://i.imgur.com/FdnCQ6i.jpeg" class="responsive">
-      <figcaption>https://safmc.net/species/porgy-red/</figcaption>
+    <div class="blog-image-container">
+      <div class="blog-image-caption-container">
+        <img src="images/porgy-fish.jpg" class="responsive">
+        <figcaption>https://safmc.net/species/porgy-red/</figcaption>
+      </div>
+    </div>
     <p>Porgies, also known as sea breams, scups, ironsides, and maidens are a broad category of. Referring to any
       of 100 species of shallow-water fish in the family of Sparidae. I have documented a very large variety of them throughout
       New England and Florida and published a science article
@@ -83,9 +99,13 @@
   
   <article>
     <h2>Common Bottlenose Dolphin</h2>
-    <img src="https://i.imgur.com/UMRbpiq.jpeg" class="responsive">
-      <figcaption>https://www.marinemammalcenter.org/animal-care/learn-about-marine-mammals/cetaceans/common-bottlenose-dolphin</figcaption>
-    <p>Bottlenose Dolphins are common in tropical and temperate oceans, can swim up to 30 kilometers and hour and dive as
+    <div class="blog-image-container">
+      <div class="blog-image-caption-container">
+        <img src="images/dolphin.jpg" class="responsive">
+        <figcaption>https://www.marinemammalcenter.org/animal-care/learn-about-marine-mammals/cetaceans/common-bottlenose-dolphin</figcaption>
+      </div>
+    </div>
+      <p>Bottlenose Dolphins are common in tropical and temperate oceans, can swim up to 30 kilometers and hour and dive as
     deep as 250 meters into the water. I love dolphins, they are very intelligent, but they can also be very evil
       and many of the things I have seen on the job are not appropriate for this blog. But many of their good qualities
     can be seen in my Dolphin sub blog.</p>
@@ -106,11 +126,17 @@
   
   <article>
     <h2>Coming to America</h2>
-    <img src="https://i.imgur.com/V3BvSbn.png" class="responsive">
-      <figcaption>Circa 1991</figcaption>
-    <img src="https://i.imgur.com/nG4Fd5f.png" class="responsive">
-      <figcaption>Circa 2004</figcaption>
-    <p>Above - Me and my wife. Below - A picture of us next to a picture of our daughter</p>
+    <div class="blog-image-container">
+      <div class="blog-image-caption-container">
+        <img src="images/husband-and-wife.png" class="responsive">
+          <figcaption>Circa 1991</figcaption>
+      </div>
+      <div class="blog-image-caption-container">
+        <img src="images/husband-wife-daughter.png" class="responsive">
+          <figcaption>Circa 2004</figcaption>
+      </div>
+    </div>
+    <p>Left - Me and my wife. Right - A picture of us next to a picture of our daughter</p>
     <p>Funny story: My surname is actually pronounced Kujo (空条), but when I moved to the United States for work,
       the immigration officer misunderstood me and spelt it out as "Cujoh", now my daughter's legal
       surname is Cujoh. It irks me, but I hear this happens to many people, so it's nice to know I am not alone.</p>
@@ -120,11 +146,15 @@
     <button>Like (401.3k)</button>
     <button>Share (37k)</button>
   </article>
-  
+
   <article>
     <h2>Red Lionfish</h2>
-    <img src="https://i.imgur.com/GvEYHAz.jpeg" class="responsive">
-      <figcaption>https://lucnix.be/picture.php?/47608/categories/created-monthly-list-2010-5-23</figcaption>
+    <div class="blog-image-container">
+      <div class="blog-image-caption-container">
+        <img src="images/red-lionfish.jpg" class="responsive">
+        <figcaption>https://lucnix.be/picture.php?/47608/categories/created-monthly-list-2010-5-23</figcaption>
+      </div>
+    </div>
     <p>The Lionfish is native to the Indo-Pacific region of the Red Sea. But I have seen many in the
     Western Atlantic Basin, particularly when I traveled to Jamaica to document marine populations there in 2003</p>
     <p>They're an invasive species in the western hemisphere, they're so numerous at this point that it is pointless
@@ -144,8 +174,13 @@
   
   <article>
     <h2>Galapagos Penguin</h2>
-    <img src="https://i.imgur.com/27jY8J1.png" class="responsive">
-      <figcaption>https://storyteller.travel/galapagos-penguin/</figcaption>
+    <div class="blog-image-container">
+      <div class="blog-image-caption-container">
+        <img src="images/penguin.png" class="responsive">
+        <figcaption>https://storyteller.travel/galapagos-penguin/</figcaption>
+      </div>
+    </div>
+      
     <p>The Galapagos Penguin live northmost of all other penguin species, generally, the western part of the
     Galapagos islands. They are also the smallest of them all.. They can be distinguished by a narrow C-shaped band of
       white feathers on both sides of their heads from their eyes to their chin, and a single band of black feathers
@@ -161,8 +196,14 @@
   
   <article>
     <h2>Egypt - 1988</h2>
-    <img src="https://i.imgur.com/rmkPvoS.png" class="responsive">
-      <figcaption>Circa 1988</figcaption>
+    <div class="blog-image-container">
+      <div class="blog-image-caption-container">
+        <img src="images/group-photo.png" class="responsive">
+        <figcaption>Circa 1988</figcaption>
+      </div>
+    </div>
+   
+      
     <p>In October 1988, my mother fell gravely ill. In order to arrange her treatment, my grandfather (Bottom right)
     flew me and a few others we met shortly before departure from Tokyo to Cairo, Egypt, where doctors could treat her illness.</p>
     <p>Unfortunately, our plane crashed near Hong Kong, we survived, forcing us to walk and drive there over the course of two months.
