Added link to my portfolio

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <li><a href="#">My Great-Great Grandfather's Proud Lineage</a></li>
       </ul>
     </header>
+
+    <h2><a class="portfolio-link" href="https://linktr.ee/shirthanger">More apps by ShirtHanger</a></h2>
   
   <article>
     <h2>Banded Archerfish</h2>
